Capitulo_7_Arrays_e_ArrayLists/Figura_7_17_InitArray_java/InitArray_CMD.txt

D:\Google Drive\exercicios_java_como_programar\Capitulo_7_Arrays_e_ArrayLists>javac Figura_7_17_InitArray_java/InitArray.java
Figura_7_17_InitArray_java\InitArray.java:24: error: cannot find symbol
        for (int row = 0; row < array.lenght; row++) {
                                     ^
  symbol:   variable lenght
  location: variable array of type int[][]
1 error

D:\Google Drive\exercicios_java_como_programar\Capitulo_7_Arrays_e_ArrayLists>javac Figura_7_17_InitArray_java/InitArray.java

D:\Google Drive\exercicios_java_como_programar\Capitulo_7_Arrays_e_ArrayLists>java Figura_7_17_InitArray_java/InitArray
Values in array1 by row are
123
456

Values in array2 by row are
12
3
456

D:\Google Drive\exercicios_java_como_programar\Capitulo_7_Arrays_e_ArrayLists>javac Figura_7_17_InitArray_java/InitArray.java

D:\Google Drive\exercicios_java_como_programar\Capitulo_7_Arrays_e_ArrayLists>java Figura_7_17_InitArray_java/InitArray
Values in array1 by row are
1 2 3
4 5 6

Values in array2 by row are
1 2
3
4 5 6

D:\Google Drive\exercicios_java_como_programar\Capitulo_7_Arrays_e_ArrayLists>